# flight-assessment-be

./: .gitignore  README.md  assessment.md  project-documentation.md  pyproject.toml
.github/workflows/: e2e.yml  tests.yml
app/: __init__.py  main.py
app/api/: errors.py  routes.py
app/clients/: __init__.py  legacy_api.py
app/core/: cache.py  codes.py  config.py  dates.py  errors.py  json.py
app/models/: api.py
app/services/: bookings.py  flights.py  normalizers.py  offers.py  reference_data.py
tests/: conftest.py  test_api.py  test_dates.py  test_e2e.py  test_normalizers.py
tests/fixtures/upstream/: airport_detail_sin.json  airport_list.json  booking_not_found.json  create_booking_error.json  create_booking_success.json  offer_not_found.json  offer_success.json  retrieve_booking_success.json  search_error.json  search_success.json
